src/objects/TR1__Document_Session__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Contact_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Document</label>
        <referenceTo>TR1__ContactDocument__c</referenceTo>
        <relationshipLabel>Document Sessions</relationshipLabel>
        <relationshipName>Document_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Exception__c</fullName>
        <label>Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                    <default>true</default>
                    <label>Initiated</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Session</label>
    <nameField>
        <displayFormat>DOCS-{0}</displayFormat>
        <label>Document Session</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>